# python-mongo-demo

./: README.md  pyproject.toml  secret.yml
mongo_demo/: mongo_test.py  setup.md
stock_info_parser/: alpha_api.py  github_pipeline.py  pipeline.py
tmp/: cash_flow.csv  company_overview.csv  quarterly_earnings.csv
