[tool.poetry]
name = "mongo-demo"
version = "0.1.0"
description = ""
authors = ["enoch <test@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.7.2"
pyyaml = "^6.0.1"
pandas = "^2.2.2"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
